--- a/team-alpha/topics.yaml
+++ b/team-alpha/topics.yaml
@@ -7,3 +7,12 @@ spec:
     name: kafka
     namespace: team-alpha
 ---
+apiVersion: platform.confluent.io/v1beta1
+kind: KafkaTopic
+metadata:
+  name: foobar
+spec:
+  kafkaClusterRef:
+    name: kafka
+    namespace: team-alpha
+---
