--- a/topics/kustomization.yaml
+++ b/topics/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: team-alpha
 resources:
-  - topics.yaml
+  - foobar.yaml
+  - gitops4lyfe.yaml
